# botw-recipe

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-cooking  README.md  Taskfile.yml  ids.json  idsnew.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: RELEASE_NOTES.md  RELEASE_NOTES_FOOTER.md
.github/workflows/: build.yml  check.yml  publish.yml
OLD/: find_recipes.py  recipeData.json
OLD/dump/: bundle.js  check.py  diffs.json  dump_runner.py
OLD/presets/: exclude_for_hundo.txt
OLD/processing/: all_items_clean_tag.yaml  all_items_grouped.yaml  crits.yaml  list_items.py
app/: Cargo.toml
app/cook/: Cargo.toml  README.md
app/cook/src/: cooking_pot.rs  effect.rs  ingr.rs  lib.rs  main.rs  recipe.rs  tag.rs
app/data/: Cargo.toml
app/data/src/: cook.rs  executor.rs  generated.rs  lib.rs  multichoose.rs  recipe.rs  wmc.rs
app/data/src/cook/: cook_data.rs  cook_effect.rs  cook_result.rs  cooking_pot.rs  error.rs  ingr.rs  mod.rs  recipe.rs  tag.rs
app/data/src/db/: chunk.rs  crit.rs  database.rs  error.rs  filter.rs  index.rs  mod.rs  record.rs  temp_result.rs
app/data/src/fsdb/: convert.rs  meta.rs  mod.rs
app/old/src/: main.rs  recipe.rs  sys.rs  view.rs
app/old/src/command/: cook.rs  exclude.rs  mod.rs
app/old/src/data/: crit_mgr.rs  database.rs  mod.rs  processing.rs  query.rs
app/rdb/: .gitignore  Taskfile.yml  eslint.config.mjs  index-tauri.html  index.html  package-lock.json  package.json  rdb.config.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/rdb/scripts/: pinyin.cjs  verifyI18n.cjs
app/rdb/src/: App.css  App.tsx  AppWrapper.tsx  HostImpl.ts  HostProvider.tsx  TauriHost.ts  boot.tsx  host.ts  main-tauri.tsx
app/rdb/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/rdb/src-tauri/icons/: icon.icns
app/rdb/src-tauri/src/: config.rs  config.yaml  cook.rs  error.rs  events.rs  executor.rs  file_io.rs  filter.rs  main.rs  search.rs  tasks.rs
app/rdb/src/components/: Actor.tsx  AlertProvider.tsx  ItemActor.tsx  ItemGroup.tsx  LocalePicker.tsx  Modifier.tsx  ModifierSelection.tsx  ResultList.tsx  StageAction.tsx  StageDivider.tsx  StageTitle.tsx  ThemeProvider.tsx
app/rdb/src/data/: Actor.test.ts  Actor.ts  ErrorMessage.ts  Group.ts  ResultData.ts  WeaponModifier.test.ts  WeaponModifier.ts
app/rdb/src/host/: Host.ts  HostBinding.ts  types.ts  useHost.ts
app/rdb/src/host/types/: CookError.ts  DatabaseError.ts  Error.ts  OptimizedRecipeData.ts  SearchComplete.ts  SearchFilter.ts  WeaponModifierSet.ts
app/rdb/src/i18n/: CONTRIBUTING.md  initLocale.ts  itemSearch.ts  locales.ts  override.ts
app/rdb/src/i18n/locales/: CONTRIBUTING.md  de-DE.yaml  en-US.json  en-US.yaml  es-ES.yaml  fr-FR.yaml  it-IT.yaml  ja-JP.yaml  ko-KR.yaml  nl-NL.yaml  ru-RU.yaml  zh-CN.json  zh-CN.yaml  zh-TW.yaml
app/rdb/src/stage/: FilterStage.tsx  ResultStage.tsx  SearchStage.tsx
app/rdb/src/store/: filter.ts  hook.ts  result.ts  search.ts  selectors.ts  store.ts
app/rdb/src/util/: animation.ts  useItemAnimationFrame.ts
app/src/command/: mod.rs
app/src/data/: mod.rs
dump/: .gitignore  README.md  combinecrit.py  combinemain.py  dump.py  find_recipes_simple.py
dump/check/: .gitignore  Cargo.toml  badge.json
dump/check/src/: main.rs
dump/console/: .clangd  .gitignore  Megaton.toml  README.md  Taskfile.yml
dump/console/scripts/: config.py  lftp-config.sh  lftp-download.sh  lftp-upload.sh  rename.py
dump/console/src/: botw_rdump.hpp  chunk.cpp  cook.cpp  generated.cpp  generated.hpp  main.cpp  print.cpp  worker.cpp
dump/console/src/impl/hack/: pmdm.cpp  pmdm.hpp
dump/console/src/impl/sead/: safe_string.cpp
dump/emulate/: .gitignore  Cargo.toml  Taskfile.yml  badge.json
dump/emulate/src/: check.rs  cook.rs  cook_cli.rs  dump.rs  lib.rs  main.rs  rdump.rs  test_read.rs
dump/tools/: .gitignore  Cargo.toml  badge.json
dump/tools/src/: check.rs  check_db.rs  compact.rs
presets/: exclude_entanglement.txt
research/: .gitignore  Cargo.toml  bfcrc32.rs  bruteforce-crc32.py  compute-crc32.py  cook.ts  decode-recipes.py  ensure-exhaustiveness.py  generate-localization.py  generate-source.py  get-actor-data.py  get-actor-names.py  group-items.py  ingredients_clean.yaml  inventory-actor.yaml  lint  main.py  out.json  p.py  prepare-recipes.py  temporary.py  util.py  validate-groups.py  version.yaml
research/bruteforce/: Cargo.toml  download_data.py
research/bruteforce/src/: main.rs
research/data/: README.md  cook-data-raw.yaml  ignored-tags.yaml  important-tags.yaml  inventory-actors.yaml  inventory-names.yaml  known-filtered-actors.yaml  non-group-tags.yaml  recipes.yaml
research/output/: .gitignore  actor-data.yaml  actor-map.yaml  actor-names.yaml  cookdata-recipes.yaml  cookdata-system.yaml  crc32.yaml  ids.yaml  items-grouped-report.txt  items-grouped.yaml  recipe-actors.yaml  recipes-with-monster.yaml  recipes.yaml  total.txt
research/processing/: all_items_raw.yaml  clean_items_by_tags.py  filter_tags_items.py  group_items.py  item_actor_names.yaml  items_in_recipe.yaml  process.py  tags_that_matter.yaml
src/: main.rs  recipe.rs  sys.rs  view.rs
src/command/: cook.rs  exclude.rs  inspect.rs
src/data/: crit_mgr.rs  query.rs
test_out/: 1ex.5.yaml  1ex.7.yaml  1ex.8.yaml  1ex.9.yaml  1ex.out.yaml  testdata.json
