[package]
name = "botw-recipe-cook"
description = "BOTW WMC cooking simulator"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "=4.5.4", features = ["derive"] }
distance = "0.4.0"
enum-map = "2.7.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.63"

[dependencies.rdata]
package = "botw-recipe-data"
path = "../data"

[features]
debug-print = []
rng-hp = []

[[bin]]
name = "rcook"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
