[package]
name = "botw-recipe-data"
description = "BOTW recipe data processing library"
version = "0.0.0"
edition = "2021"

[dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
derivative = "2.2.0"
derive_deref = "1.1.1"
enum-map = "2.7.3"
fs2 = "0.4.3"
log = "0.4.22"
num = { version = "0.4.3", features = ["num-bigint"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml_ng = "0.10.0"
sha2 = "0.10.8"
static_assertions = "1.1.0"
thiserror = "1.0.69"
ts-rs = "9.0.1"

[dependencies.botw-recipe-generated]
path = "../../packages/generated"
features = ["full"]

[features]
default = []
debug-print = [] # enable debug printing
