[package]
name = "botw-recipe-dump-emulate"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.20", features = ["derive"] }
distance = "0.4.0"
enum-map = "2.7.3"
filetime = "0.2.24"
num_cpus = "1.16.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
threadpool = "1.8.1"

[dependencies.rdata]
package = "botw-recipe-data"
path = "../../app/data"

[features]
debug-print = ["rdata/debug-print"] # enable debug printing

[[bin]]
name = "rdump"
path = "src/rdump.rs"

[[bin]]
name = "check"
path = "src/check.rs"

[[bin]]
name = "test-read"
path = "src/test_read.rs"

[[bin]]
name = "cook-cli"
path = "src/cook_cli.rs"
