[package]
name = "botw-recipe-dump-tools"
version = "0.0.0"
description = "Tools to check/validate the dump"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "=4.5.4", features = ["derive"] }
filetime = "0.2.24"
num_cpus = "1.16.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
threadpool = "1.8.1"

[dependencies.rdata]
package = "botw-recipe-data"
path = "../../app/data"

[dependencies.rcook]
package = "botw-recipe-cook"
path = "../../app/cook"

[[bin]]
name = "check"
path = "src/check.rs"

[[bin]]
name = "compact"
path = "src/compact.rs"

[[bin]]
name = "check-db"
path = "src/check_db.rs"
