[package]
name = "botw-recipe-database"
version = "0.1.0"
description = "BotW Recipe Database"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies.rdata]
package = "botw-recipe-data"
path = "../../data"

[dependencies]
tauri = { version = "1", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
threadpool = "1.8.1"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }
derivative = "2.2.0"
thiserror = "1.0.63"
num_cpus = "1.16.0"
log = "0.4.22"
env_logger = "0.11.5"
enum-map = "2.7.3"
itertools = "0.13.0"
ts-rs = "9.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
